--- a/P2022/P2022R0.md
+++ b/P2022/P2022R0.md
@@ -27,16 +27,12 @@ This document adds the wording for ```ranges::lexicographical_compare_three_way`
 
 > ::: add
 > | template<
-> |     input_iterator I1, sized_sentinel_for<I1> S1,
-> |     input_iterator I2, sized_sentinel_for<I2> S2,
+> |     input_iterator I1, sentinel_for<I1> S1,
+> |     input_iterator I2, sentinel_for<I2> S2,
 > |     class Proj1 = identity, 
 > |     class Proj2 = identity,
 > |     class Comp = compare_three_way
 > | >
-> | requires
-> |     three_way_comparable_with< 
-> |         projected<I1,Proj1>, projected<I2,Proj2> 
-> |     >
 > | constexpr auto
 > |     ranges::lexicographical_compare_three_way( 
 > |         I1 first1, S1 last1, I2 first2, S2 last2, Comp comp = {}, Proj1 = {}, Proj2 = {}
@@ -61,10 +57,6 @@ This document adds the wording for ```ranges::lexicographical_compare_three_way`
 > |     class Proj2 = identity,
 > |     class Comp = compare_three_way
 > | >
-> | requires
-> |     three_way_comparable_with< 
-> |         projected<I1,Proj1>, projected<I2,Proj2> 
-> |     >
 > | constexpr auto
 > |     ranges::lexicographical_compare_three_way( 
 > |         I1 first1, S1 last1, I2 first2, S2 last2, Comp comp = {}, Proj1 = {}, Proj2 = {}
@@ -74,15 +66,11 @@ This document adds the wording for ```ranges::lexicographical_compare_three_way`
 
 > ::: add
 
-1.
-Let N be the minimum integer between distance(first1,s1) and distance(first2,s2).
-Let E(n) be comp(proj1(*(first1 + n)), proj2(*(first2 + n))).
+- [1] Let N be the minimum integer between distance(first1,s1) and distance(first2,s2). Let E(n) be comp(proj1(*(first1 + n)), proj2(*(first2 + n))).
 
-2.
-Returns: E(i), where i is the smallest integer in [0, N) such that E(i) != 0 is true, or (distance(first1,s1) <=> distance(first2, s2) if no such integer exists.
+- [2] Returns: E(i), where i is the smallest integer in [0, N) such that E(i) != 0 is true, or (distance(first1,s1) <=> distance(first2, s2) if no such integer exists.
 
-3.
-Complexity: At most N applications of comp, porj1, porj2.
+- [3] Complexity: At most N applications of comp, porj1, porj2.
 
 > :::
 
