--- a/P2022/P2022R0.md
+++ b/P2022/P2022R0.md
@@ -18,9 +18,9 @@ This document adds the wording for ```ranges::lexicographical_compare_three_way`
 - There is no reason to restrict the relation between the compared ranges in any way (e.g. three_way_comparable_with).
 - The Comp function is restricted to return one of the comparison categories, and nothing else.
 - functions built on top of ```ranges::lexicographical_compare_three_way``` such as (the yet to be defined) ```ranges::sort_three_way()``` 
-should benefit from the additional information that can be found in the return value of ```ranges::lexicographical_compare_three_way```
+should benefit from the additional information that can be found in the return value of ```ranges::lexicographical_compare_three_way```,
 and even use it to indicate the user that the function ended in a specific state. 
-E.g. sort_three_way() may report that the resulted sorted range is either sorted from smallest to largest (or largest to smallest), all element are equal or even 
+E.g. sort_three_way() may report that the resulted sorted range is sorted from smallest to largest (or largest to smallest), all element are equal or even 
 that the given range is unsortable.
 
 # Proposed Wording 
@@ -204,6 +204,6 @@ that the given range is unsortable.
     Alex Dathskovsky <calebxyz@gmail.com> 
     Avi Korzac <Avi.Korzac@beyeonics.com> 
     Lee-or Saar <Leeor.Saar@beyeonics.com>
-    Mor Almalach <Mor.Elmaliach@beyeonics.com>
+    Mor Elmaliach <Mor.Elmaliach@beyeonics.com>
     Yaron Meister <Yaron.Meister@beyeonics.com>
 
